--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -37,6 +37,7 @@ html {
 /* Header */
 
 header {
+  z-index: 5;
   position: fixed;
   width: 100%;
   border-bottom: solid 1px #c6c1c1;
@@ -115,12 +116,18 @@ header .mobile {
 #sign-up-section {
   display: flex;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
   height: 43.5rem;
+  background-image: url("../images/landingPage.jpg");
+  background-position: bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
+
 }
 
 #sign-up-cta {
   padding: 0 5rem 2.5rem 5rem;
+  margin-left: 100px;
   border: solid 1px #979797;
   border-radius: 4px;
   background-color: #9dc20b;
