--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,6 +26,7 @@ html {
 
 .image-container img {
   display: block;
+  max-width: 100%;
 }
 
 @media only screen and (max-width: 760px) {
@@ -228,12 +229,21 @@ header .mobile {
   padding: 2rem;
   margin: 0px 1.25rem;
   background-color: white;
+  width: 635px;
+  height: 50%;
 }
 
 .feature .image-container {
   width: 90%;
   height: 65%;
   margin: 0 auto;
+}
+
+.feature .content {
+  display: block;
+  height: 80px;
+  padding: 2.5rem 0;
+  margin: 0;
 }
 
 .feature h2 {
